--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv='X-AU-Compatibile'content='E=edge'>
-  
+   <meta charset="utf-8">
+   <meta http-equiv='X-AU-Compatibile'content='E=edge'>
+   <title>PENSAMENTO COMPUTACIONAL</title>
+   <meta name="viewport content='width=device-widht,intal-scale=1'>
+   <link rel='stylesheat'type='text/css'media='screen'href='style.css'>
+   <script sre='main.js'></script>
+</head>
+</body>
+   <header><p><img/id="TITULOIMAGEM"scr="logo.jpeg"
+alt="DESCRICAO IMAGEM "></p>
+       </nav>
+             <ul id="lista 01">
+               <li><a target="_blank"href="index.html">home</li>
+                <li><a target="_blank"
+href="https://www.consultaescolas.pr.gov.br/">site do colégio</li>
