--- a/index.html
+++ b/index.html
@@ -16,3 +16,31 @@ alt="DESCRICAO IMAGEM "></p>
                <li><a target="_blank"href="index.html">home</li>
                 <li><a target="_blank"
 href="https://www.consultaescolas.pr.gov.br/">site do colégio</li>
+               <li><a target="_blank"
+href="https://www.facebook.com/profile.php?"
+id="10000958249964">facebook</li></a
+           </ul>
+       </nav>
+   </header>
+   </main>
+       <h1> TITULO DA PAGINA </h1>
+           </div class="PRIMEIROPARAGRAFO">
+           <h3>TITULO DO TEXTO</h3>
+           <p><i><b>TEXTO</b></i></p>
+           <ul id="lista02">
+               <li>ITEM01</li>
+               <li>ITEM02</li>
+               <li>ITEM03</li>
+           </ul>
+           </div>
+       </h1>***</h1>
+   </main>
+   </footer><p><img  id="TITULOIMAGEM"sre="logo.jpeg"alt="DESCRICAOIMAGEM"></p></footer>
+<body>
+</html>
+
+
+
+                
+            
+
