--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <mea charset="utf-8">
+   <meta charset="utf-8">
    <meta http-equiv='X-AU-Compatibile'content='E=edge'>
    <title>PENSAMENTO COMPUTACIONAL</title>
    <meta name="viewport content='width=device-widht,intal-scale=1'>
